# rust-libmdnsresponder

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/src/: main.rs
src/: lib.rs  mdnsresponder_error.rs
src/ipc/: mod.rs
src/ipc/header/: mod.rs  reply.rs  request.rs
src/ipc/operation/: addrinfo.rs  browse.rs  mod.rs  register.rs  resolve.rs
