[package]
name = "libmdnsresponder"
description = "Library for communicating with mDNSResponder over a unix socket"
homepage = ""
repository = ""

version = "0.0.1"
edition = "2024"
license-file = "LICENSE"

[lib]
name = "mdnsresponder"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
log = "0.4.28"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
rand = "0.9.2"
